--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -5,8 +5,8 @@
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 二十大表忠狂潮下 中共恐惧政权垮台(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019526.md)
 #### [ 谁能进入新一届中央军委 就看谁“对习近平绝对忠诚”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019451.md)
-#### [ 习近平近臣谁上位?二十大入常分析各异(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019442.md)
 #### [ 中共理论家命运多舛 当代康生王沪宁二十大何去何从？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019548.md)
+#### [ 习近平近臣谁上位?二十大入常分析各异(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019442.md)
 #### [ 江泽民朱镕基缺席二十大另有内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663252.md)
 #### [ 美媒最新爆料：下届常委名单习近平亲信上榜 胡春华不见了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663324.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
@@ -31,8 +31,8 @@
 #### [ 海外热传常委名单 袁红冰：应思考摧毁暴政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847705.md)
 #### [ 【热门话题】分析：二十大报告九大谎言/新常委名单出炉](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554876.md)
 #### [ 章天亮: 决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663303.md)
-#### [ 【天亮时分】决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848045.md)
 #### [ 【文昭谈古论今】习近平20大透露一可怕目标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848050.md)
+#### [ 【天亮时分】决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848045.md)
 #### [ 王岐山等人缺席二十大代表团讨论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848317.md)
 #### [ 【时事金扫描】一张图表 解密习二十大报告玄机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848058.md)
 #### [ 北京四通桥抗议升级？传高校令关闭“Airdrop”禁自助打印(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019461.md)
@@ -45,9 +45,9 @@
 #### [ 二十大官场“表忠潮” 分析：中共恐惧政权垮台](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554702.md)
 #### [ 中共总领事涉打人被曝光 英议员吁立刻驱逐](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848093.md)
 #### [ 【晚间新闻】中共二十大抗议中召开 习现异常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847874.md)
+#### [ 中共二十大人事猜谜慢热 3媒体同日放出迥异名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555029.md)
+#### [ 人为放火？江西湖南等4省多地发生山火 民间炸锅(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019579.md)
 #### [ 唐朝名相魏徵后裔撰写家族史 揭露中共罪恶](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848336.md)
 #### [ 古井贡酒单日市值蒸发124亿 与禁酒令有关？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848170.md)
 #### [ 新书详述北京如何操控索罗斯等西方精英](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848278.md)
 #### [ 美国前大使：中共末日将至 支持中国人退党](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848220.md)
-#### [ 江峰: 习报告缩水 身体吿衰 这词暴露了习与中共前程](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663318.md)
-#### [ 人为放火？江西湖南等4省多地发生山火 民间炸锅(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019579.md)
