--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -16,8 +16,8 @@
 #### [ 总理接棒 黑马是他？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663486.md)
 #### [ 西方媒体怎样报导中共二十大](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848308.md)
 #### [ 西方媒体怎样报导中共二十大](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848308.md)
-#### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663414.md)
 #### [ 中共20大常委名单出炉？准不准4天后揭晓(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019567.md)
+#### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663414.md)
 #### [ 美媒揭秘：习近平靠这个手段消除连任阻力(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019310.md)
 #### [ 上海大学教师因转发北京四通桥图讯疑被刑拘(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019467.md)
 #### [ 消息：习近平党内大清洗 针对孟建柱手段“微妙”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554144.md)
@@ -25,15 +25,15 @@
 #### [ 四通桥反党标语在中国各地和全球传开](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848108.md)
 #### [ 习近平首次倡导“财富积累机制” 释明显信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663474.md)
 #### [ 习近平二十大报告89次提“安全”释信号(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019325.md)
-#### [ 中共审查 习二十大讲话口误秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847857.md)
 #### [ 习二十大口误成“敏感词” 被全网秒杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663477.md)
-#### [ 分析：二十大报告揭习近平缺乏安全感(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019471.md)
+#### [ 中共审查 习二十大讲话口误秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847857.md)
 #### [ 海外热传常委名单 袁红冰：应思考摧毁暴政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847705.md)
+#### [ 分析：二十大报告揭习近平缺乏安全感(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019471.md)
 #### [ 【热门话题】分析：二十大报告九大谎言/新常委名单出炉](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554876.md)
-#### [ 章天亮: 决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663303.md)
 #### [ 【文昭谈古论今】习近平20大透露一可怕目标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848050.md)
-#### [ 【天亮时分】决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848045.md)
+#### [ 章天亮: 决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663303.md)
 #### [ 王岐山等人缺席二十大代表团讨论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848317.md)
+#### [ 【天亮时分】决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848045.md)
 #### [ 【时事金扫描】一张图表 解密习二十大报告玄机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848058.md)
 #### [ 北京四通桥抗议升级？传高校令关闭“Airdrop”禁自助打印(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019461.md)
 #### [ 分析：王沪宁操刀二十大报告 掩盖“天大事实”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554822.md)
@@ -49,5 +49,5 @@
 #### [ 人为放火？江西湖南等4省多地发生山火 民间炸锅(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019579.md)
 #### [ 唐朝名相魏徵后裔撰写家族史 揭露中共罪恶](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848336.md)
 #### [ 古井贡酒单日市值蒸发124亿 与禁酒令有关？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848170.md)
+#### [ 与四通桥事件有关？军方二十大表态听习指挥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848489.md)
 #### [ 新书详述北京如何操控索罗斯等西方精英](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848278.md)
-#### [ 美国前大使：中共末日将至 支持中国人退党](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848220.md)
